# rich-msa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYING  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: requirements.txt  test.yml
rich_msa/: __init__.py  cli.py
tests/data/: blosum62_colors.json  swissprot-halorhodopsin.muscle.afa
